feat(penggajian): Wave 7 — orchestrator proses gaji (kepegawaian-8seb)
GajiBatchProsesCommandService: reset hasil lama (proses + master), snapshot,
kalkulasi paralel per pegawai (virtual-thread executor; error per pegawai
dicatat DATA/SYSTEM dan dilanjutkan), update status root ke
WAIT_VERIFICATION_PHASE_1; fatal → FAILED + error SYSTEM (tidak rethrow).

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>